--- a/horarios-plus-plus-server/package.json
+++ b/horarios-plus-plus-server/package.json
@@ -8,8 +8,9 @@
 		"test": "bun test"
 	},
 	"dependencies": {
+		"@elysiajs/cors": "^1.0.2",
 		"elysia": "latest",
-		"mongoose": "^8.4.0",
+		"mongoose": "^8.4.1",
 		"zod": "^3.23.8"
 	},
 	"devDependencies": {
