--- a/package.json
+++ b/package.json
@@ -1,13 +1,18 @@
 {
-	"name": "horarios-plus-plus",
-	"module": "index.ts",
-	"type": "module",
-	"devDependencies": {
-		"@biomejs/biome": "^1.7.3",
-		"@types/bun": "latest"
-	},
-	"peerDependencies": {
-		"typescript": "^5.0.0"
-	},
-	"trustedDependencies": ["@biomejs/biome"]
+  "name": "horarios-plus-plus",
+  "module": "index.ts",
+  "devDependencies": {
+    "@biomejs/biome": "^1.8.2",
+    "@types/bun": "latest"
+  },
+  "peerDependencies": {
+    "typescript": "^5.4.5"
+  },
+  "scripts": {
+    "startOld": "bun run ./horarios-plus-plus-server-old./index.js; bun run ./horarios-plus-plus-client/src/index.js",
+    "startnew": "bun run ./horarios-plus-plus-server./index.ts; bun run ./horarios-plus-plus-client/src/index.js"
+
+  },
+  "trustedDependencies": ["@biomejs/biome"],
+  "type": "module"
 }
