--- a/horarios-plus-plus-server/package.json
+++ b/horarios-plus-plus-server/package.json
@@ -1,20 +1,8 @@
 {
-  "name": "horarios-plus-plus-server",
-  "version": "1.0.50",
-  "scripts": {
-    "dev": "bun --watch src/index.ts",
-    "build": "bun build src/index.ts",
-    "start": "NODE_ENV=production bun src/index.ts",
-    "test": "bun test"
-  },
+  "type": "module",
   "dependencies": {
-    "@elysiajs/cors": "^1.0.2",
-    "elysia": "latest",
-    "mongoose": "^8.4.3",
-    "zod": "^3.23.8"
-  },
-  "devDependencies": {
-    "bun-types": "latest"
-  },
-  "module": "src/index.js"
+    "cors": "^2.8.5",
+    "express": "^4.19.2",
+    "mongoose": "^8.4.3"
+  }
 }
