--- a/horarios-plus-plus-client/package.json
+++ b/horarios-plus-plus-client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "horarios-plus-plus",
+  "name": "horarios-plus-plus-client",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
