--- a/horarios-plus-plus-client/package.json
+++ b/horarios-plus-plus-client/package.json
@@ -15,6 +15,7 @@
     "mongoose": "^8.4.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
     "tailwind": "^4.0.0",
