--- a/horarios-plus-plus-server-new/package.json
+++ b/horarios-plus-plus-server-new/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@elysiajs/cors": "^1.0.2",
+    "@elysiajs/swagger": "^1.0.5",
     "elysia": "latest",
     "mongoose": "^8.4.4",
     "zod": "^3.23.8"
